"fixed focus to prevent shifting position"

--- a/ThriftAidOverall/client/src/index.css
+++ b/ThriftAidOverall/client/src/index.css
@@ -1170,7 +1170,7 @@ box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
   flex-grow: 0;
   flex-shrink: 0;
   height: 20%;
-  width: 33.9vw;
+  width: 35.3vw;
   padding-left: 3%;
   margin-right: 6%;
   margin-bottom: 6%;
@@ -1182,6 +1182,7 @@ box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
 }
 
 .thriftstorepost-dashboard:focus{
